# gnote

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
examples/: README.md  test_cli.ps1  test_mcp.py
gctx/: __init__.py  cli.py  config.py  config_manager.py  git_manager.py  logger.py  mcp.py  server.py  token_counter.py  tools.py  vector_manager.py
gnote/: __init__.py  cli.py  config_manager.py  git_manager.py  logger.py  mcp.py  server.py  token_counter.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_manager.py  test_git_manager.py  test_mcp_tools.py  test_token_counter.py  test_vector_manager.py
